--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body><section id="container"><header><h1><img src="BEK2.png"/><p>We're proudly coming soon</p></h1></header></section><div id="social"><a class="twitter" href="http://twitter.com/bassemelkahki" target="_blank">Twitter</a><a class="blog" href="http://blog.bassemelkahki.com" target="blank">Blog</a></div><div id="blog"></div>
+<body><section id="container"><header><h1><img src="BEK2.png"/><p>We're proudly coming soon, at least we hope so</p></h1></header></section><div id="social"><a class="twitter" href="http://twitter.com/bassemelkahki" target="_blank">Twitter</a><a class="blog" href="http://blog.bassemelkahki.com" target="blank">Blog</a></div><div id="blog"></div>
 
 <footer><div id="copyright"><p>&copy; Bassem El-Kahki 2012.</p></div></footer>
 
